# relay

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .npmignore  .prettierignore  .syncpackrc.json  A2A_TRANSPORT_SPEC.md  AGENTS.md  ARCHITECTURE.md  BUDGET_AUDIT.md  CHANGELOG.md  CLAUDE.md  CORE_SIMPLIFICATION_SCOPE.md  CUSTOM_VERIFY_DESIGN.md  Cargo.toml  Cross.toml  DESIGN.md  PROXY_INTEGRATION.md  Package.swift  README.md  SESSION_HANDOFF.md  SPEC.md  TELEMETRY.md  TESTING.md  TRACEBACK_DESIGN.md  WORKFLOW-RUN-LOG.md  cli-rebuild-decisions.md  competitor-analysis-pi-messenger.md  docker-compose.dev.yml  example.ts  install.sh  install.test.sh  knip.json  openapi.yaml  package-lock.json  package.json  prpm.json  relay.bug-fixes-resume.yaml  relay.bug-fixes.yaml  (+9 more)
.agent-relay/: storage-status.txt  workflow-runs.jsonl
.beads/: beads.jsonl  broker-migration-plan.md  broker-wave-execution.md  config.yaml  issues.jsonl  migration-state.json
.claude/: ecc-tools.json  identity.json
.claude-plugin/: marketplace.json
.codex/: AGENTS.md
.cursor/: mcp.json
.gemini/: settings.json
.github/: CODEOWNERS  ci-retrigger-note.md  pull_request_template.md
.msd/: autofix-findings-summary.txt  autofix-plan.json
.relay/: config.json
.trajectories/: index.json  multi-server-architecture-doc.md
build-plans/: 00-meta-workflow-coordinator.ts  01-sdk-persona-resolution.spec.md  01-sdk-persona-resolution.ts  02-workflow-generator.spec.md  02-workflow-generator.ts  03-cli-agent-flag.spec.md  03-cli-agent-flag.ts  04-tests.spec.md  04-tests.ts  05-documentation.spec.md  05-documentation.ts
crates/relaycast/: CHANGELOG.md  Cargo.toml  README.md
crates/relaycast/examples/: basic.rs
crates/relaycast/src/: agent.rs  client.rs  credentials.rs  error.rs  lib.rs  relay.rs  types.rs  ws.rs
crates/relaycast/tests/: parity.rs
docs/: AGENTS.md  AR_COMMERCE_STRATEGY.md  BUILDING_ON_AR.md  CLOUD-ONBOARDING-DESIGN.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  DELIVERY-ACK-PROPOSAL.md  FEATURE_AUDIT.md  FEDERATION_PROPOSAL.md  GTM-STRATEGY.md  HOOKS_API.md  INSPIRATION.md  INTEGRATION-GUIDE.md  MEMORY_STACK_DECISION.md  PLUGIN_REGISTRY.md  PROPOSAL-trajectories.md  TASKS_2026_01_16.md  USE_CASES.md  agent-relay-protocol.md  agent-relay-snippet.md  authentication.md  cli-cloud-commands.md  cli-command-tree.md  cli-improvements.md  cli-messaging.md  cli-on-the-relay.md  cli-overview.md  cli-resolver-rfc.md  communicate-agno.md  communicate-claude-sdk.md  communicate-crewai.md  communicate-crewai.mdx  communicate-google-adk.md  communicate-openai-agents.md  communicate-swarms.md  communicate-swarms.mdx  communicate.md  communicate.mdx  comparison-crewai-vs-relay.md  competitive-analysis-claude-flow.md  (+26 more)
evals/: PLAN.md  README.md
examples/: .env.example  README.md  cli-usage.sh  discord-codex-standalone.ts  relay-node.ts  slack-codex-standalone.ts
integrations/: SDK_FRICTION_REPORT.md
memory/: INCIDENT-20260612T141510Z.md  INCIDENT-20260616T125400Z.md  INCIDENT-20260616T231436Z.md
openclaw-web/: next.config.mjs  package.json  sst.config.ts
proposals/: channel-notifications-for-relaycast-mcp.md
public/: index.html
relay-broker/: Cargo.toml
relay-broker/relay-snippets/: agent-relay-snippet.md
relay-broker/scripts/: relaycast_send.sh
relay-broker/scripts/multi-review/: .mcp.json  package-lock.json  package.json  review.mjs
relay-broker/src/: auth.rs  control.rs  conversation_log.rs  dedup.rs  lib.rs  main.rs  message_bridge.rs  relaycast_ws.rs  scheduler.rs  snippets.rs  spawner.rs
relay-broker/tests/: e2e_production.rs  queue_scheduler_integration.rs  stress_reconnect.rs
relay-pty/: Cargo.toml
relay-snippets/: agent-relay-protocol.md  agent-relay-snippet.md
reports/: pr-audit-2026-01-30.md
scripts/: audit-bundled-deps.mjs  broker-migration.ts  build-bun.sh  build-cjs.mjs  build-openclaw-bun.sh  build-release.sh  build-standalone.sh  bump-versions.sh  check-cli-versions.mjs  ci-standalone-smoke.sh  e2e-sdk-lifecycle.mjs  e2e-test.sh  migrate-to-broker-sdk.ts  postinstall.js  prepack-materialize-workspaces.mjs  prepare-husky.cjs  prepare.js  publish-npm.sh  run-relay-cleanroom-ci.sh  run-relay-validation-suite.sh  run-swarm-implementation.ts  seed-community-workspace.ts  send-github-traffic-to-posthog.ts  sign-macos-binary.sh  spawn-reviewers.ts  stress-test-orchestrator-integration.mts  stress-test-orchestrator.mjs  stress-test-relay-broker.sh  test-interactive-terminal.sh  test-spawn-refactor.sh  todo-scan.sh  validate-npm-tarball.mjs  verify-bundled-deps.mjs  verify-macos-binary.sh  (+1 more)
src/: auth.rs  (+44 more)
(+2961 files in other folders)
