[package]
name = "agent-relay"
version = "3.0.0"
edition = "2021"
autobins = false

[lib]
name = "relay_broker"
path = "src/lib.rs"

[[bin]]
name = "agent-relay"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
hostname = "0.4"
parking_lot = "0.12"
portable-pty = "0.8"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.15", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process", "term"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.19"
